Snoman Setup Monitor added added

--- a/Snowman/setup.html
+++ b/Snowman/setup.html
@@ -228,11 +228,14 @@
 					<h3 class="mb-30">Monitor</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/elements/d.jpg" alt="" class="img-fluid">
+							<img src="img/SETUP IMAGE/Monitor.png" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<h4>Title</h4>
-                            <p>Details: </p>
+							<h4>LG 22MK600M-B 21.5 inch IPS Full HD LED Monitor</h4>
+                            <p>Model: 22MK600M <br>
+                                Resolution: Full HD (1920 x 1080)<br>
+                                Display: IPS, 75Hz, 5ms<br>
+                                Ports: HDMI, VGA, 3.5mm Audio Out</p>
 						</div>
 					</div>
 				</div>
@@ -244,7 +247,7 @@
 						</div>
 						<div class="col-md-9 mt-sm-20">
 							<h4>Title</h4>
-                            <p>Details: </p>
+                            <p></p>
 						</div>
 					</div>
 				</div>
