Snoman Setup gamepad added

--- a/Snowman/setup.html
+++ b/Snowman/setup.html
@@ -243,11 +243,16 @@
 					<h3 class="mb-30">Gamepad</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/elements/d.jpg" alt="" class="img-fluid">
+							<img src="img/SETUP IMAGE/Gamepad.png" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<h4>Title</h4>
-                            <p></p>
+							<h4>Logitech F310</h4>
+                            <p>Four-switch D-pad for precise control and familiar console layout. Plug-and-play on PC.<br>
+                                Cord: 70.86 in (1.8 m)<br>
+                                Layout: Console-Like<br>
+                                D-Pad: 4 Switch<br>
+
+                            </p>
 						</div>
 					</div>
 				</div>
