--- a/Snowman/setup.html
+++ b/Snowman/setup.html
@@ -89,7 +89,7 @@
         <!-- Header part end-->
 
         <!-- breadcrumb start-->
-        <section class="breadcrumb breadcrumb_bg">
+        <section class="breadcrumb setupbg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
