Snoman bug fixed and clan updated

--- a/Snowman/home.html
+++ b/Snowman/home.html
@@ -47,7 +47,7 @@
                                         <a class="nav-link" href="home.html">HOME</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="setup.html">Setup</a> 
+                                        <a class="nav-link" href="setup.html">SETUP</a> 
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="clan.html">CLAN</a>
