--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -34,7 +34,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
+                            <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo" width="50%"> </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -44,41 +44,43 @@
                             <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="fighter.html">fighter</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="clan.html">team</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
-                                            role="button" data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">
-                                            Blog
-                                        </a>
-                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="blog.html"> blog</a>
-                                            <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
-                                            role="button" data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">
-                                            pages
-                                        </a>
-                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                            <a class="dropdown-item" href="elements.html">Elements</a>
-                                        </div>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="contact.html">Contact</a>
-                                    </li>
-                                </ul>
+                                         <a class="nav-link" href="home.html">HOME</a>
+                                     </li>
+                                     <li class="nav-item">
+                                         <a class="nav-link" href="setup.html">SETUP</a> 
+                                     </li>
+                                     <li class="nav-item">
+                                         <a class="nav-link" href="clan.html">CLAN</a>
+                                     </li>
+                                     <li class="nav-item dropdown">
+                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
+                                             role="button" data-toggle="dropdown" aria-haspopup="true"
+                                             aria-expanded="false">
+                                             GAMES
+                                         </a>
+                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                             <a class="dropdown-item" href="valorant.html">VALORANT</a>
+                                             <a class="dropdown-item" href="gtav.html">GTA-V</a>
+                                             <a class="dropdown-item" href="fifa23.html">FIFA - 23</a>
+                                             <a class="dropdown-item" href="ets.html">Euro Truck SImulator</a>
+                                         </div>
+                                     </li>
+                                     <li class="nav-item dropdown">
+                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
+                                             role="button" data-toggle="dropdown" aria-haspopup="true"
+                                             aria-expanded="false">
+                                             TUTORIAL
+                                         </a>
+                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                             <a class="dropdown-item" href="tutorialGTAV.html">GTA - V</a>
+                                         </div>
+                                     </li>
+                                     <li class="nav-item">
+                                         <a class="nav-link" href="contact.html">CONTACT</a>
+                                     </li>
+                                 </ul>
                             </div>
-                            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+                            <!-- <a href="#" class="btn_1 d-none d-sm-block">Install Now</a> -->
                         </nav>
                     </div>
                 </div>
@@ -87,13 +89,13 @@
         <!-- Header part end-->
 
         <!-- breadcrumb start-->
-        <section class="breadcrumb breadcrumb_bg">
+        <section class="breadcrumb clanbg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="breadcrumb_iner text-center">
                             <div class="breadcrumb_iner_item">
-                                <h2>Team Matches</h2>
+                                <h2>My Clan</h2>
                             </div>
                         </div>
                     </div>
@@ -101,9 +103,87 @@
             </div>
         </section>
         <!-- breadcrumb start-->
-
+        <section class="gallery_part section_padding">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-xl-7">
+                        <div class="section_tittle text-center">
+                            <h2>Brother's Of Destruction</h2>
+                            <img src="img/ClanImage/BSODLOGO.png" alt="" class="img-fluid">
+                            <p align="justify">Processor: Intel Core i7-12650H (12th Gen)Asus TUF Dash F15 
+                                FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming LaptopProcessor: Intel Core i7-12650H (12th Gen)Asus TUF Dash F15 
+                                FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming Laptop
+                                Processor: Intel Core i7-12650H (12th Gen)Asus TUF Dash F15 
+                                FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming Laptop
+                                Processor: Intel Core i7-12650H (12th Gen)Asus TUF Dash F15 
+                                FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming Laptop
+                                Processor: Intel Core i7-12650H (12th Gen)Asus TUF Dash F15 
+                                FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming Laptop
+                            
+                            
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-7">
+                        <div class="section_tittle text-center">
+                            <h2>Battleground's of B'SOD</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-top-border">
+					<h3 class="mb-30">VALORANT</h3>
+					<div class="row">
+						<div class="col-md-3">
+							<img src="img/ClanImage/BSOD.png" alt="" class="img-fluid">
+						</div>
+						<div class="col-md-9 mt-sm-20">
+							<h4>Title</h4>
+                            <p>Details</p>
+						</div>
+					</div>
+				</div>
+                <div class="section-top-border">
+					<h3 class="mb-30">PUBG</h3>
+					<div class="row">
+						<div class="col-md-3">
+							<img src="img/ClanImage/BSOD.png" alt="" class="img-fluid">
+						</div>
+						<div class="col-md-9 mt-sm-20">
+							<h4>Title</h4>
+                            <p>Details</p>
+						</div>
+					</div>
+				</div>
+                <div class="section-top-border">
+					<h3 class="mb-30">GTA V</h3>
+					<div class="row">
+						<div class="col-md-3">
+							<img src="img/ClanImage/BSOD.png" alt="" class="img-fluid">
+						</div>
+						<div class="col-md-9 mt-sm-20">
+							<h4>Title</h4>
+                            <p>Details</p>
+						</div>
+					</div>
+				</div>
+                <div class="section-top-border">
+					<h3 class="mb-30">Clash of Clan</h3>
+					<div class="row">
+						<div class="col-md-3">
+							<img src="img/ClanImage/BSOD.png" alt="" class="img-fluid">
+						</div>
+						<div class="col-md-9 mt-sm-20">
+							<h4>Title</h4>
+                            <p>Details</p>
+						</div>
+					</div>
+				</div>
+            </div>
+        </section>
         <!--::client logo part end::-->
-        <section class="client_logo">
+        <!-- <section class="client_logo">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
@@ -133,7 +213,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--::client logo part end::-->
 
         <!-- use sasu part end-->
