--- a/Snowman/setup.html
+++ b/Snowman/setup.html
@@ -47,7 +47,7 @@
                                          <a class="nav-link" href="home.html">HOME</a>
                                      </li>
                                      <li class="nav-item">
-                                         <a class="nav-link" href="setup.html">Setup</a> 
+                                         <a class="nav-link" href="setup.html">SETUP</a> 
                                      </li>
                                      <li class="nav-item">
                                          <a class="nav-link" href="clan.html">CLAN</a>
@@ -72,7 +72,7 @@
                                              TUTORIAL
                                          </a>
                                          <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                             <a class="dropdown-item" href="elements.html">GTA - V</a>
+                                             <a class="dropdown-item" href="tutorialGTAV.html">GTA - V</a>
                                          </div>
                                      </li>
                                      <li class="nav-item">
