Snoman clan updated

--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -128,6 +128,37 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7">
                         <div class="section_tittle text-center">
+                            <h2>Founding Members</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-top-border">
+					<h3 class="mb-30">SNOWMAN</h3>
+					<div class="row">
+						<div class="col-md-3">
+							<img src="img/ClanImage/" alt="" class="img-fluid">
+						</div>
+						<div class="col-md-9 mt-sm-20">
+							<h4>SAIF AKA SNOWMAN</h4>
+                            <p>Details</p>
+						</div>
+					</div>
+				</div>
+                <div class="section-top-border">
+					<h3 class="mb-30">JIGSAW</h3>
+					<div class="row">
+						<div class="col-md-3">
+							<img src="img/ClanImage/" alt="" class="img-fluid">
+						</div>
+						<div class="col-md-9 mt-sm-20">
+							<h4>SHOAIB AKA JIGSAW</h4>
+                            <p>Details</p>
+						</div>
+					</div>
+				</div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-7">
+                        <div class="section_tittle text-center">
                             <h2>Battleground's of B'SOD</h2>
                         </div>
                     </div>
@@ -139,7 +170,7 @@
 							<img src="img/ClanImage/BSOD.png" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<h4>Title</h4>
+							<h4>Valorant Premier</h4>
                             <p>Details</p>
 						</div>
 					</div>
