Snoman clan founder image addedupdated

--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>gaming</title>
+    <title>Clan</title>
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -136,7 +136,7 @@
 					<h3 class="mb-30">SNOWMAN</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/ClanImage/" alt="" class="img-fluid">
+							<img src="img/ClanImage/saif.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
 							<h4>SAIF AKA SNOWMAN</h4>
@@ -148,7 +148,7 @@
 					<h3 class="mb-30">JIGSAW</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/ClanImage/" alt="" class="img-fluid">
+							<img src="img/ClanImage/Shoaib.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
 							<h4>SHOAIB AKA JIGSAW</h4>
