Snoman clan bio added

--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -110,16 +110,17 @@
                         <div class="section_tittle text-center">
                             <h2>Brother's Of Destruction</h2>
                             <img src="img/ClanImage/BSODLOGO.png" alt="" class="img-fluid">
-                            <p align="justify">Processor: Intel Core i7-12650H (12th Gen)Asus TUF Dash F15 
-                                FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming LaptopProcessor: Intel Core i7-12650H (12th Gen)Asus TUF Dash F15 
-                                FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming Laptop
-                                Processor: Intel Core i7-12650H (12th Gen)Asus TUF Dash F15 
-                                FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming Laptop
-                                Processor: Intel Core i7-12650H (12th Gen)Asus TUF Dash F15 
-                                FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming Laptop
-                                Processor: Intel Core i7-12650H (12th Gen)Asus TUF Dash F15 
-                                FX517ZE Core i7 12th Gen RTX 3050 4GB Graphics 15.6" FHD WV Gaming Laptop
-                            
+                            <p align="justify">BSOD, short for Brothers of Destruction, is a 
+                                passionate gaming clan catering to amateur players. Founded by 
+                                the dynamic duo of Saif and Shoaib, this clan draws its inspiration 
+                                from the legendary WWE tag team, The Undertaker and Kane, famously 
+                                known as the "Brothers of Destruction." Their admiration for these 
+                                wrestling icons ignited the spark behind the clan's name. BSOD has 
+                                since evolved into a multifaceted gaming community, with a presence 
+                                in renowned games like Valorant, PUBG, GTA V, Clash of Clans, football 
+                                , Township, and more. As a testament to the bond forged by Saif and Shoaib 
+                                and their unwavering love for the world of gaming, BSOD serves as a hub where 
+                                amateur players unite, compete, and thrive in the gaming universe.
                             
                             </p>
                         </div>
