Snoman clan founders bio added

--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -141,7 +141,16 @@
 						</div>
 						<div class="col-md-9 mt-sm-20">
 							<h4>SAIF AKA SNOWMAN</h4>
-                            <p>Details</p>
+                            <p>Saif, an amateur gamer with a background in engineering, hails from 
+                                the lively city of Rajshahi, Bangladesh. His journey into the world of 
+                                gaming has been a fascinating exploration of his passion. As one of the 
+                                founding members of BSOD (Brothers of Destruction), Saif has channeled his g
+                                aming enthusiasm into creating a welcoming space for fellow amateur players 
+                                and enthusiasts.At present, Saif Khan resides in the bustling metropolis of Dhaka,
+                                 Bangladesh, where he continues to nurture his love for gaming alongside his 
+                                 engineering pursuits. With the heart of an amateur gamer and the skills of 
+                                 an engineer, Saif Khan is a driving force behind the camaraderie and 
+                                 progress of the BSOD community.</p>
 						</div>
 					</div>
 				</div>
@@ -153,7 +162,12 @@
 						</div>
 						<div class="col-md-9 mt-sm-20">
 							<h4>SHOAIB AKA JIGSAW</h4>
-                            <p>Details</p>
+                            <p>Shoaib Khan, an ardent amateur gamer, is currently pursuing his studies in engineering. 
+                                Shoaib's gaming journey has been one rooted in the joy of casual gameplay and exploration. 
+                               Shoaib is an integral member of the founding team at BSOD (Brothers of Destruction), and 
+                               his dedication to the gaming world, coupled with his engineering studies, offers a unique 
+                               perspective on the technical aspects of gaming. His dual interests, as a student and a gamer, 
+                               mirror the diverse talents and passions within BSOD.</p>
 						</div>
 					</div>
 				</div>
