Snoman clan Valorant premier added

--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -182,11 +182,16 @@
 					<h3 class="mb-30">VALORANT</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/ClanImage/BSOD.png" alt="" class="img-fluid">
+							<img src="img/ClanImage/valoclan.png" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<h4>Valorant Premier</h4>
-                            <p>Details</p>
+							<h4>Bros Of Doom</h4>
+                            <h4>Tag: xxxxx</h4>
+                            <p>Valorant premier team</p>
+                            <p>Team: 
+                                Snowman || Jigsaw || Ranger || Clay || Nino || Carnage
+                            
+                            </p>
 						</div>
 					</div>
 				</div>
