Snoman clan Valorant premier updated

--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -179,7 +179,7 @@
                     </div>
                 </div>
                 <div class="section-top-border">
-					<h3 class="mb-30">VALORANT</h3>
+					<h3 class="mb-30">VALORANT PREMIER</h3>
 					<div class="row">
 						<div class="col-md-3">
 							<img src="img/ClanImage/valoclan.png" alt="" class="img-fluid">
@@ -187,15 +187,18 @@
 						<div class="col-md-9 mt-sm-20">
 							<h4>Bros Of Doom</h4>
                             <h4>Tag: xxxxx</h4>
-                            <p>Valorant premier team</p>
-                            <p>Team: 
-                                Snowman || Jigsaw || Ranger || Clay || Nino || Carnage
-                            
-                            </p>
+                            <p>Team:</p>
+                            <img src="img/ClanImage/Valorant/Snowman.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Jigsaw.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Ranger.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Clay.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/NINO.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Carnage.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
 						</div>
 					</div>
 				</div>
-                <div class="section-top-border">
+                <!-- <div class="section-top-border">
 					<h3 class="mb-30">PUBG</h3>
 					<div class="row">
 						<div class="col-md-3">
@@ -218,7 +221,7 @@
                             <p>Details</p>
 						</div>
 					</div>
-				</div>
+				</div> -->
                 <div class="section-top-border">
 					<h3 class="mb-30">Clash of Clan</h3>
 					<div class="row">
