--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -195,6 +195,29 @@
                             <img src="img/ClanImage/Valorant/NINO.jpg" alt="" class="img-fluid" width="100px">
                             <img src="img/ClanImage/Valorant/Carnage.jpg" alt="" class="img-fluid" width="100px">
                             <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
+                            
+						</div>
+					</div>
+				</div>
+                <div class="section-top-border">
+					<h3 class="mb-30">VALORANT</h3>
+					<div class="row">
+						<div class="col-md-3">
+							<img src="img/ClanImage/Valorant/valorant.webp" alt="" class="img-fluid">
+						</div>
+						<div class="col-md-9 mt-sm-20">
+							 <h4>Coming Soon</h4>
+                            <!--<img src="img/ClanImage/Valorant/Snowman.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Jigsaw.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Ranger.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Clay.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/NINO.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Carnage.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px"> -->
 						</div>
 					</div>
 				</div>
@@ -271,7 +294,7 @@
         <!--::client logo part end::-->
 
         <!-- use sasu part end-->
-        <section class="Latest_War padding_top">
+        <!-- <section class="Latest_War padding_top">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
@@ -372,11 +395,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- use sasu part end-->
 
         <!--::about_us part start::-->
-        <section class="live_stareams padding_bottom">
+        <!-- <section class="live_stareams padding_bottom">
             <div class="container-fluid">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-md-3 offset-lg-1 offset-sm-1">
@@ -463,7 +486,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--::about_us part end::-->
 
         <!--::footer_part start::-->
@@ -473,57 +496,46 @@
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
-                                <a href="index.html" class="footer_logo_iner"> <img src="img/logo.png" alt="#"> </a>
-                                <p>Heaven fruitful doesn't over lesser days appear creeping seasons so behold bearing
-                                    days
-                                    open
+                                <h4>SNOWMAN</h4>
+                                <p align="justify">"Snowman" refers to a virtual persona or digital identity 
+                                    that exclusively exists only in the virtual realm of video games and online gaming communities. 
+                                    It is important to emphasize that this virtual identity is established solely for legitimate
+                                     and ethical purposes within the gaming environment. It is not intended for any unethical or
+                                      malicious activities.
                                 </p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
-                                <h4>Contact Info</h4>
-                                <p>Address : Your address goes
-                                    here, your demo address.
-                                    Bangladesh.</p>
-                                <p>Phone : +8880 44338899</p>
-                                <p>Email : info@colorlib.com</p>
+                                <h4>Physical form</h4>
+                                <p align="justify">Saif Ahammod Khan is a diligent student studying at North South University. 
+                                    Originally from Rajshahi, Bangladesh, he has a strong commitment to his education. 
+                                    Currently residing in Dhaka, the capital city of Bangladesh, Saif is focused on his 
+                                    studies and aspiring to create a bright future for himself.
                             </div>
                         </div>
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
                                 <h4>Important Link</h4>
                                 <ul class="list-unstyled">
-                                    <li><a href=""> WHMCS-bridge</a></li>
-                                    <li><a href="">Search Domain</a></li>
-                                    <li><a href="">My Account</a></li>
-                                    <li><a href="">Shopping Cart</a></li>
-                                    <li><a href="">Our Shop</a></li>
+                                    <li><a href="https://www.facebook.com/snowman0421">FACEBOOK PAGE</a></li>
+                                    <li><a href="https://www.youtube.com/channel/UCltyvTSm1860UvUkWZ7n9SQ">YOUTUBE</a></li>
+                                    <li><a href="https://discord.gg/pspnrySFqQ">DISCORD  COMMUNITY</a></li>
+                                    <li><a href="https://twitter.com/SaifAhammod">TWITTER</a></li>
+                                    <li><a href="https://www.instagram.com/saifahammod/">INSTAGRAM</a></li>
                                 </ul>
                             </div>
                         </div>
+
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
-                                <h4>Newsletter</h4>
-                                <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons deve behold
-                                    bearing
-                                    days
-                                    open
+                                <h4>Thank you Colorib</h4>
+                                <p align="justify">I wanted to express my heartfelt thanks for the outstanding website template 
+                                    I obtained from <a href="https://colorlib.com/">Colorib</a>. The design is impressive, and I'm eager to customize 
+                                    it to meet my project's requirements. Your generosity in sharing this template 
+                                    is greatly appreciated, and I'm confident it will play a crucial role in the 
+                                    success of my website. Thanks again for your fantastic work!
                                 </p>
-                                <div id="mc_embed_signup">
-                                    <form target="_blank"
-                                        action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                        method="get" class="subscribe_form relative mail_part">
-                                        <input type="email" name="email" id="newsletter-form-email"
-                                            placeholder="Email Address" class="placeholder hide-on-focus"
-                                            onfocus="this.placeholder = ''"
-                                            onblur="this.placeholder = ' Email Address '">
-                                        <button type="submit" name="submit" id="newsletter-submit"
-                                            class="email_icon newsletter-submit button-contactForm"><i
-                                                class="far fa-paper-plane"></i></button>
-                                        <div class="mt-10 info"></div>
-                                    </form>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -534,19 +546,20 @@
                     <div class="row align-items-center">
                         <div class="col-lg-8">
                             <div class="copyright_text">
-                                <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
+                                <P> © All rights reserved to Saif Ahammod Khan Aka SNOWMAN</P>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="footer_icon social_icon">
                                 <ul class="list-unstyled">
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a>
-                                    </li>
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
+                                    <li><a href="https://www.facebook.com/gaming/snowman0421" class="single_social_icon">
+                                        <i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://twitter.com/SaifAhammod" class="single_social_icon">
+                                        <i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="https://www.youtube.com/channel/UCltyvTSm1860UvUkWZ7n9SQ" class="single_social_icon">
+                                        <i class="fab fa-youtube"></i></a></li>
+                                    <li><a href="https://discord.gg/pspnrySFqQ" class="single_social_icon">
+                                        <i class="fab fa-discord"></i></a></li>
                                 </ul>
                             </div>
                         </div>
