--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -187,14 +187,14 @@
 						<div class="col-md-9 mt-sm-20">
 							<h4>Bros Of Doom</h4>
                             <h4>Tag: xxxxx</h4>
-                            <p>Team:</p>
-                            <img src="img/ClanImage/Valorant/Snowman.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Jigsaw.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Ranger.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Clay.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/NINO.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Carnage.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
+                            <h5><br>Hall of Fame:</h5>
+                            <img src="img/ClanImage/Players/Snowman.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Players/Jigsaw.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Players/Ranger.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Players/Clay.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Players/NINO.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Players/Carnage.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Players/Krotip.jpg" alt="" class="img-fluid" width="100px">
                             
 						</div>
 					</div>
@@ -203,21 +203,19 @@
 					<h3 class="mb-30">VALORANT</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/ClanImage/Valorant/valorant.webp" alt="" class="img-fluid">
+							<img src="img/ClanImage/valorant.webp" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							 <h4>Coming Soon</h4>
-                            <!--<img src="img/ClanImage/Valorant/Snowman.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Jigsaw.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Ranger.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Clay.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/NINO.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Carnage.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px">
-                            <img src="img/ClanImage/Valorant/Krotip.jpg" alt="" class="img-fluid" width="100px"> -->
+							 <h4>A Nostalgic Ode to Valorant's Golden Days</h4>
+                             <p align="justify">Valorant stands out as a source of unforgettable memories. Let's cherish the friendships, 
+                                first victories, epic plays, and evolving metas that made the old days of Valorant so special. 
+                                Thank you, and I will always remember all these golden days of ours. I miss you guys a lot.</p>
+                                <h5><br>Hall of Fame:</h5>
+                            <img src="img/ClanImage/Players/Snowman.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Players/Jigsaw.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Players/Ranger.jpg" alt="" class="img-fluid" width="100px">
+                            <img src="img/ClanImage/Players/Clay.jpg" alt="" class="img-fluid" width="100px">
+                            
 						</div>
 					</div>
 				</div>
@@ -249,11 +247,13 @@
 					<h3 class="mb-30">Clash of Clan</h3>
 					<div class="row">
 						<div class="col-md-3">
-							<img src="img/ClanImage/BSOD.png" alt="" class="img-fluid">
+							<img src="img/ClanImage/COC/COC.png" alt="" class="img-fluid">
 						</div>
 						<div class="col-md-9 mt-sm-20">
-							<h4>Title</h4>
-                            <p>Details</p>
+							<h4>Clan name: B'SOD</h4>
+                            <h4>Clan tag: #2220p00</h4>
+                            <h4>Clan level: 8</h4>
+                            <h5><br>Hall of Fame:</h5>
 						</div>
 					</div>
 				</div>
