COC player part completed

--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -203,7 +203,7 @@
                                 <img src="img/ClanImage/Players/JIGSAW.jpg" alt="Card Image 2">
                                 <div class="acard-title">JIGSAW</div>
                             </div>
-                        
+
                             <div class="acard">
                                 <img src="img/ClanImage/Players/RANGER.jpg" alt="Card Image 3">
                                 <div class="acard-title">RANGER</div>
@@ -270,11 +270,11 @@
                             <div class="acard">
                                 <img src="img/ClanImage/Players/JIGSAW.jpg" alt="Card Image 2">
                                 <div class="acard-title">JIGSAW</div>
-                            </div>  
+                            </div>
                             <div class="acard">
                                 <img src="img/ClanImage/Players/TZ.jpg" alt="Card Image 2">
                                 <div class="acard-title">TZ</div>
-                            </div>              
+                            </div>
                             <div class="acard">
                                 <img src="img/ClanImage/Players/RANGER.jpg" alt="Card Image 3">
                                 <div class="acard-title">RANGER</div>
@@ -326,11 +326,104 @@
                             <h4>Clan tag: #2220p00</h4>
                             <h4>Clan level: 8</h4>
                             <h5><br>Hall of Fame:</h5>
-
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/SNOWMAN.jpg" alt="Card Image 1">
+                                <div class="acard-title">SAIF</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/JIGSAW.jpg" alt="Card Image 2">
+                                <div class="acard-title">SHOAIB</div>
+                            </div>
+                            
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/PHYLAXIS.jpg" alt="Card Image 2">
+                                <div class="acard-title">PHYLAXIS</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/MAMUN.jpg" alt="Card Image 2">
+                                <div class="acard-title">MAMUN</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/TASNIM.jpg" alt="Card Image 2">
+                                <div class="acard-title">TASNIM</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/ROKIB.jpg" alt="Card Image 2">
+                                <div class="acard-title">ROKIB</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/GABBAR.jpg" alt="Card Image 2">
+                                <div class="acard-title">GABBAR</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/AFRIDI.jpg" alt="Card Image 2">
+                                <div class="acard-title">AFRIDI</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/Player.png" alt="Card Image 2">
+                                <div class="acard-title">AHSAN</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/Player.png" alt="Card Image 2">
+                                <div class="acard-title">ARNOB</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/Player.png" alt="Card Image 2">
+                                <div class="acard-title">SAIKAT</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/SHIHAB.jpg" alt="Card Image 2">
+                                <div class="acard-title">SHIHAB</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/SHONNIV.jpg" alt="Card Image 2">
+                                <div class="acard-title">SHONNIV</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/FOYSAL.jpg" alt="Card Image 2">
+                                <div class="acard-title">FOYSAL</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/Player.png" alt="Card Image 2">
+                                <div class="acard-title">TANVIR</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/RUDRO.jpg" alt="Card Image 2">
+                                <div class="acard-title">RUDRO</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/RANGER.jpg" alt="Card Image 2">
+                                <div class="acard-title">FIYAZ</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/Fplayer.png" alt="Card Image 2">
+                                <div class="acard-title">PAPRI</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/WICKEDONE.jpg" alt="Card Image 2">
+                                <div class="acard-titlex">WICKEDONE</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/SOURAV.jpg" alt="Card Image 2">
+                                <div class="acard-title">SOUROV</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/TZ.jpg" alt="Card Image 2">
+                                <div class="acard-title">TZ</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/Pirate.jpg" alt="Card Image 1">
+                                <div class="acard-title">ECHO</div>
+                            </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/Pepkha.jpg" alt="Card Image 1">
+                                <div class="acard-title">KABBO</div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+    </div>
     </div>
     </section>
     <!--::client logo part end::-->
