--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- animate CSS -->
     <link rel="stylesheet" href="css/animate.css">
-
     <!-- owl carousel CSS -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <!-- font awesome CSS -->
@@ -657,7 +656,7 @@
     <!--::about_us part end::-->
 
     <!--::footer_part start::-->
-    <footer class="footer_part">
+    <footer class="footer_part clan_footer">
         <div class="footer_top">
             <div class="container">
                 <div class="row">
