--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -196,7 +196,7 @@
                             <h5><br>Hall of Fame:</h5>
                             <div class="acard">
                                 <img src="img/ClanImage/Players/SNOWMAN.jpg" alt="Card Image 1">
-                                <div class="acard-title">SNOWMAN</div>
+                                <div class="acard-titlesmaller">SNOWMAN</div>
                             </div>
                             <div class="acard">
                                 <img src="img/ClanImage/Players/JIGSAW.jpg" alt="Card Image 2">
@@ -244,7 +244,7 @@
                             <h5><br>Hall of Fame:</h5>
                             <div class="acard">
                                 <img src="img/ClanImage/Players/SNOWMAN.jpg" alt="Card Image 1">
-                                <div class="acard-title">SNOWMAN</div>
+                                <div class="acard-titlesmaller">SNOWMAN</div>
                             </div>
                             <div class="acard">
                                 <img src="img/ClanImage/Players/Rique.jpg" alt="Card Image 1">
@@ -400,7 +400,7 @@
                             </div>
                             <div class="acard">
                                 <img src="img/ClanImage/Players/WICKEDONE.jpg" alt="Card Image 2">
-                                <div class="acard-titlex">WICKEDONE</div>
+                                <div class="acard-titlexsmall">WICKEDONE</div>
                             </div>
                             <div class="acard">
                                 <img src="img/ClanImage/Players/SOURAV.jpg" alt="Card Image 2">
