--- a/Snowman/valorant.html
+++ b/Snowman/valorant.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>gaming</title>
+    <title>Valorant</title>
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -33,7 +33,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo" width="50%">
+                        </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -43,39 +44,43 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <a class="nav-link" href="home.html">HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="fighter.html">fighter</a>
+                                    <a class="nav-link" href="setup.html">SETUP</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="team.html">team</a>
+                                    <a class="nav-link" href="clan.html">CLAN</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Blog
+                                        role="button" data-toggle="dropdown" aria-haspopup="true"
+                                        aria-expanded="false">
+                                        GAMES
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="blog.html"> blog</a>
-                                        <a class="dropdown-item" href="single-blog.html">Single blog</a>
+                                        <a class="dropdown-item" href="valorant.html">VALORANT</a>
+                                        <a class="dropdown-item" href="gtav.html">GTA-V</a>
+                                        <a class="dropdown-item" href="fifa23.html">FIFA - 23</a>
+                                        <a class="dropdown-item" href="ets.html">Euro Truck SImulator</a>
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        pages
+                                        role="button" data-toggle="dropdown" aria-haspopup="true"
+                                        aria-expanded="false">
+                                        TUTORIAL
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                        <a class="dropdown-item" href="elements.html">Elements</a>
+                                        <a class="dropdown-item" href="tutorialGTAV.html">GTA - V</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
+                                    <a class="nav-link" href="contact.html">CONTACT</a>
                                 </li>
                             </ul>
                         </div>
-                        <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
+                        <!-- <a href="#" class="btn_1 d-none d-sm-block">Install Now</a> -->
                     </nav>
                 </div>
             </div>
@@ -90,7 +95,7 @@
                 <div class="col-lg-12">
                     <div class="breadcrumb_iner text-center">
                         <div class="breadcrumb_iner_item">
-                            <h2>blog</h2>
+                            <h2>Valorant</h2>
                         </div>
                     </div>
                 </div>
