Some pic deleted

--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -195,20 +195,20 @@
                             <h4>Tag: xxxxx</h4>
                             <h5><br>Hall of Fame:</h5>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/SNOWMAN.jpg" alt="Card Image 1">
+                                <img src="img/ClanImage/Players/SNOWMAN.jpg" alt="SNOWMAN">
                                 <div class="acard-titlesmaller">SNOWMAN</div>
                             </div>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/JIGSAW.jpg" alt="Card Image 2">
+                                <img src="img/ClanImage/Players/JIGSAW.jpg" alt="JIGSAW">
                                 <div class="acard-title">JIGSAW</div>
                             </div>
 
                             <div class="acard">
-                                <img src="img/ClanImage/Players/RANGER.jpg" alt="Card Image 3">
+                                <img src="img/ClanImage/Players/RANGER.jpg" alt="RANGER">
                                 <div class="acard-title">RANGER</div>
                             </div>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/CLAY.jpg" alt="Card Image 3">
+                                <img src="img/ClanImage/Players/CLAY.jpg" alt="CLAY">
                                 <div class="acard-title">CLAY</div>
                             </div>
                             <div class="acard">
@@ -216,7 +216,7 @@
                                 <div class="acard-title">EL NINO</div>
                             </div>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/CARNAGE.jpg" alt="Card Image 3">
+                                <img src="img/ClanImage/Players/CARNAGE.jpg" alt="CARNAGE">
                                 <div class="acard-title">CARNAGE</div>
                             </div>
                             <div class="acard">
@@ -243,7 +243,7 @@
                                 lot.</p>
                             <h5><br>Hall of Fame:</h5>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/SNOWMAN.jpg" alt="Card Image 1">
+                                <img src="img/ClanImage/Players/SNOWMAN.jpg" alt="SNOWMAN">
                                 <div class="acard-titlesmaller">SNOWMAN</div>
                             </div>
                             <div class="acard">
@@ -263,11 +263,11 @@
                                 <div class="acard-title">TIGER</div>
                             </div>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/CLAY.jpg" alt="Card Image 3">
+                                <img src="img/ClanImage/Players/CLAY.jpg" alt="CLAY">
                                 <div class="acard-title">CLAY</div>
                             </div>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/JIGSAW.jpg" alt="Card Image 2">
+                                <img src="img/ClanImage/Players/JIGSAW.jpg" alt="JIGSAW">
                                 <div class="acard-title">JIGSAW</div>
                             </div>
                             <div class="acard">
@@ -275,11 +275,11 @@
                                 <div class="acard-title">TZ</div>
                             </div>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/RANGER.jpg" alt="Card Image 3">
+                                <img src="img/ClanImage/Players/RANGER.jpg" alt="RANGER">
                                 <div class="acard-title">RANGER</div>
                             </div>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/CARNAGE.jpg" alt="Card Image 3">
+                                <img src="img/ClanImage/Players/CARNAGE.jpg" alt="CARNAGE">
                                 <div class="acard-title">CARNAGE</div>
                             </div>
                             <div class="acard">
@@ -326,11 +326,11 @@
                             <h4>Clan level: 8</h4>
                             <h5><br>Hall of Fame:</h5>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/SNOWMAN.jpg" alt="Card Image 1">
+                                <img src="img/ClanImage/Players/SNOWMAN.jpg" alt="SAIF">
                                 <div class="acard-title">SAIF</div>
                             </div>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/JIGSAW.jpg" alt="Card Image 2">
+                                <img src="img/ClanImage/Players/JIGSAW.jpg" alt="SHOAIB">
                                 <div class="acard-title">SHOAIB</div>
                             </div>
                             
@@ -391,7 +391,7 @@
                                 <div class="acard-title">RUDRO</div>
                             </div>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/RANGER.jpg" alt="Card Image 2">
+                                <img src="img/ClanImage/Players/RANGER.jpg" alt="Fiyaz">
                                 <div class="acard-title">FIYAZ</div>
                             </div>
                             <div class="acard">
