Some pic updated

--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -112,7 +112,7 @@
                     <div class="col-xl-7">
                         <div class="section_tittle text-center">
                             <h2>Brother's Of Destruction</h2>
-                            <img src="img/ClanImage/BSODLOGO.png" alt="" class="img-fluid">
+                            <img src="img/ClanImage/BSODLOGO.png" alt="BSOD" width="30%" class="img-fluid">
                             <p align="justify">BSOD, short for Brothers of Destruction, is a
                                 passionate gaming clan catering to amateur players. Founded by
                                 the dynamic duo of Saif and Shoaib, this clan draws its inspiration
