MS course added

--- a/education.html
+++ b/education.html
@@ -130,7 +130,7 @@
             <br>
             <b>Project:</b> Customer Churn Prediction
           </div>
-  
+          <br>
           <li><div class="bulletpoint">
             <b>CSE445: Machine Learning</b>
           </div>    
@@ -140,7 +140,7 @@
             <br>
             <b>Project:</b> House Rent Prediction
           </div>
-
+          <br>
           <li><div class="bulletpoint">
             <b>CSE497: Human Computing Interaction (HCI)</b>
           </div>    
@@ -150,7 +150,7 @@
             <br>
             <b>Project:</b> E-Hospital
           </div>
-
+          <br>
           <li><div class="bulletpoint">
             <b>CSE 493: Cryptography</b>
           </div>    
@@ -160,7 +160,7 @@
             <br>
             <b>Project:</b> Password Encryption Decryption App
           </div>
-
+          <br>
           <li><div class="bulletpoint">
             <b>CSE 512: Distributed Database</b>
           </div>    
@@ -170,7 +170,7 @@
             <br>
             <b>Internship:</b> eSRD-Lab E-Commerce Distributed Database Virtual Learning under vInternship.org.
           </div>
-
+          <br>
           <li><div class="bulletpoint">
             <b>CSE 533: Machine Learning</b>
           </div>    
@@ -180,7 +180,7 @@
             <br>
             <b>Project:</b> Video Anomaly Detection by Using Machine Learning Approach
           </div>
-
+          <br>
           <li><div class="bulletpoint">
             <b>CSE 543: Introduction to Robotics</b>
           </div>    
@@ -190,7 +190,38 @@
             <br>
             <b>Project:</b> Mapping And Localization of UAV in Unknown Environment Using Monocular Visual Odometry
           </div>
-
+          <br>
+          <li><div class="bulletpoint">
+            <b>CSE516: Bioinformatics Computing</b>
+          </div>    
+          </li>
+          <div class = "Educationdetails">
+            <b>Supervisor:</b> Dr. Shazzad Hosain
+            <br>
+            <b>Project:</b> Implementation of Some String Matching Algorithms
+            
+          </div>
+          <br>
+          <li><div class="bulletpoint">
+            <b>CSE583: Digital Image Processing</b>
+          </div>    
+          </li>
+          <div class = "Educationdetails">
+            <b>Supervisor:</b> Dr. Shafin Rahman
+            <br>
+            <b>Project:</b>  Image Classification For Eye Diseases Identification 
+          </div>
+          <br>
+          <li><div class="bulletpoint">
+            <b>CSE562: Modeling and Simulation</b>
+          </div>    
+          </li>
+          <div class = "Educationdetails">
+            <b>Supervisor:</b> Dr. Sifat Momen
+            <br>
+            <b>Project:</b> 
+            <br><br>
+          </div>
         </ul>
         <br>
 
