--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -68,7 +68,7 @@
                                             <a class="dropdown-item" href="ets.html">Euro Truck SImulator</a>
                                         </div>
                                     </li>
-                                    <li class="nav-item dropdown">
+                                    <!-- <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
@@ -80,7 +80,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact.html">CONTACT</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                             <!-- <a href="#" class="btn_1 d-none d-sm-block">Install Now</a> -->
