gAMING pAGE uPDATED

--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -212,10 +212,6 @@
                                 <div class="acard-title">CLAY</div>
                             </div>
                             <div class="acard">
-                                <img src="img/ClanImage/Players/Player.png" alt="Card Image 3">
-                                <div class="acard-title">EL NINO</div>
-                            </div>
-                            <div class="acard">
                                 <img src="img/ClanImage/Players/CARNAGE.jpg" alt="CARNAGE">
                                 <div class="acard-title">CARNAGE</div>
                             </div>
@@ -223,6 +219,11 @@
                                 <img src="img/ClanImage/Players/Krotip.jpg" alt="Card Image 3">
                                 <div class="acard-title">KROTIP</div>
                             </div>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/Player.png" alt="Card Image 3">
+                                <div class="acard-title">EL NINO</div>
+                            </div>
+
 
                         </div>
                     </div>
@@ -286,6 +287,25 @@
                                 <img src="img/ClanImage/Players/Krotip.jpg" alt="Card Image 3">
                                 <div class="acard-title">KROTIP</div>
                             </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="section-top-border">
+                    <h3 class="mb-30">CANDY CRUSH</h3>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <img src="img/cc.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md-9 mt-sm-20">
+                            <h4>Shame Shame Shame</h4>
+
+                            <h5><br>Hall of Fame:</h5>
+                            <div class="acard">
+                                <img src="img/ClanImage/Players/DarkFang.jpg" alt="SNOWMAN">
+                                <div class="acard-titlesmaller">DarkFang</div>
+                            </div>
+
 
                         </div>
                     </div>
