Book pAGE uPDATED

--- a/Book/books.html
+++ b/Book/books.html
@@ -77,8 +77,8 @@
                             <img src="img/BookImage/atomichabit.jpeg" alt="" class="img-fluid">
                         </div>
                         <div class="col-md-9 mt-sm-20">
-                            <h4>Writer:</h4>
-                            <h5>Category: </h5>
+                            <h4>Writer: James Clear</h4>
+                            <h5>Category: Self-development and psychology </h5>
                             <p>Rating:</p>
                             <p>Review:</p>
                         </div>
@@ -91,8 +91,8 @@
                             <img src="img/BookImage/Ikigai.jpg" alt="" class="img-fluid">
                         </div>
                         <div class="col-md-9 mt-sm-20">
-                            <h4>Writer:</h4>
-                            <h5>Category: </h5>
+                            <h4>Writer:  Héctor García & Francesc Miralles </h4>
+                            <h5>Category: Self-development</h5>
                             <p>Rating:</p>
                             <p>Review:</p>
                         </div>
