Movie pAGE uPDATED

--- a/Book/books.html
+++ b/Book/books.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Books</title>
-    <link rel="icon" href="../favlogo.png">
+    <link rel="icon" type="image/x-icon" href="../Images/logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- animate CSS -->
@@ -120,7 +120,7 @@
                         </div>
                         <div class="col-md-9 mt-sm-20">
                             <h4>Writer: শাহ্‌নাজ পান্না </h4>
-                            <h5>Category:Thriller </h5>
+                            <h5>Category: Thriller </h5>
                             <p>Rating:</p>
                             <p>Review:</p>
                         </div>
