--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
       </li>
       <li>
         <p align="Justify">
-          Watching movie and series <i class=" fa fa-film"></i>   
+          <a href="/MS/movieseries.html">Watching movie and series</a> <i class=" fa fa-film"></i>   
         </p>
       </li>
       <li>
