--- a/MS/movieseries.html
+++ b/MS/movieseries.html
@@ -10,9 +10,9 @@
         }
         .bg-img {
   /* The image used */
-  background-image: url("img_nature.jpg");
+  background-image: url("/MS/Image/mvbg.jpg");
 
-  min-height: 380px;
+  min-height: 500px;
 
   /* Center and scale the image nicely */
   background-position: center;
