--- a/Snowman/clan.html
+++ b/Snowman/clan.html
@@ -55,7 +55,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="clan.html">CLAN</a>
                                     </li>
-                                    <li class="nav-item dropdown">
+                                    <!-- <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
@@ -67,7 +67,7 @@
                                             <a class="dropdown-item" href="fifa23.html">FIFA - 23</a>
                                             <a class="dropdown-item" href="ets.html">Euro Truck SImulator</a>
                                         </div>
-                                    </li>
+                                    </li> -->
                                     <!-- <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
